@@ -1,3 +1,12 @@
+2018-04-09  Jan Hubicka  <jh@suse.cz>
+
+	PR rtl/84058
+	* cfgcleanup.c (try_forward_edges): Do not give up on crossing
+	jumps; choose last target that matches the criteria (i.e.
+	no partition changes for non-crossing jumps).
+	* cfgrtl.c (cfg_layout_redirect_edge_and_branch): Add basic
+	support for redirecting crossing jumps to non-crossing.
+
 2018-04-09  Alexey Brodkin  <abrodkin@synopsys.com>
 
 	* config/arc/arc.c (arc_expand_prologue): Set stack usage info
